--- a/mathOperator.html
+++ b/mathOperator.html
@@ -4,76 +4,151 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>Learning C mathOperator</title>
+  <title>Learning C FirstProgram</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
-  <link rel="stylesheet" href="css/styles.css" />
+ 
+  <!-- CSS -->
+  
+   <!-- Bootstrap Scripts -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+   integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/code.css">
-  <link rel="stylesheet" href="css/mathOperator-style.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/firstprogram-style.css">
+
+  <!-- Java Script -->
+  <script src="js/code.js"></script>
+
+
 </head>
 
-<body>
-  <div class="bg-two">
-
-    <div class="container">
-      <!--Side bar-->
-      <nav role="navigation">
-        <div id="menuToggle">
-          <input type="checkbox" />
-          <span></span>
-          <span></span>
-          <span></span>
-          <ul id="menu">
-            <a href="index.html" class="w3-bar-item w3-button">מי אנחנו?</a>
-            <a href="firstProgram.html" class="w3-bar-item w3-button">התוכנית הראשונה</a>
-            <a href="variables.html" class="w3-bar-item w3-button">משתנים</a>
-            <a href="printAndScan.html" class="w3-bar-item w3-button">קלט ופלט</a>
-            <a href="mathOperator.html" class="w3-bar-item w3-button">אופרטורים חשבוניים</a>
-            <a href="statments.html" class="w3-bar-item w3-button">משפטי בקרה</a>
-            <a href="oneDimLoops.html" class="w3-bar-item w3-button">לולאות</a>
-            <a href="twoDimLoops.html" class="w3-bar-item w3-button">לולאות דו מימדיות</a>
-            <a href="casting.html" class="w3-bar-item w3-button">קסטינג </a>
-            <a href="sizeOf.html" class="w3-bar-item w3-button">סייז אוף </a>
-            <a href="typeDef.html" class="w3-bar-item w3-button">טייפ דפ</a>
-            <a href="functions.html" class="w3-bar-item w3-button">פונקציות</a>
-            <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות</a>
-            <a href="pointers.html" class="w3-bar-item w3-button">מצביעים</a>
-            <a href="doublePointer.html" class="w3-bar-item w3-button">מצביע כפול</a>
-            <a href="arrays.html" class="w3-bar-item w3-button">מערכים</a>
-            <a href="dinArrays.html" class="w3-bar-item w3-button">מערכים דינאמיים</a>
-            <a href="string.html" class="w3-bar-item w3-button">מחרוזות</a>
-            <a href="binSearch.html" class="w3-bar-item w3-button">חיפוש בינארי</a>
-            <a href="twoDimArrays.html" class="w3-bar-item w3-button">מערכים דו ממדיים</a>
-            <a href="bubbleSort.html" class="w3-bar-item w3-button">מיון בועות</a>
-            <a href="selectionSort.html" class="w3-bar-item w3-button">מיון בחירה</a>
-            <a href="insertionSort.html" class="w3-bar-item w3-button">מיון הכנסה</a>
-            <a href="quickSort.html" class="w3-bar-item w3-button">מיון מהיר</a>
-            <a href="mergeSort.html" class="w3-bar-item w3-button">מיון מיזוג</a>
-          </ul>
-        </div>
-      </nav>
-      <!--End of Side bar-->
-
+<body class="bg">
+  <section id="top">
+    <div>
+      <div class="container">
+        <!--Side bar-->
+        <nav role="navigation">
+          <div id="menuToggle">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+              <a href="index.html" class="w3-bar-item w3-button">מי אנחנו?</a>
+              <a href="firstProgram.html" class="w3-bar-item w3-button">התוכנית הראשונה</a>
+              <a href="variables.html" class="w3-bar-item w3-button">משתנים</a>
+              <a href="printAndScan.html" class="w3-bar-item w3-button">קלט ופלט</a>
+              <a href="mathOperator.html" class="w3-bar-item w3-button">אופרטורים חשבוניים</a>
+              <a href="statments.html" class="w3-bar-item w3-button">משפטי בקרה</a>
+              <a href="oneDimLoops.html" class="w3-bar-item w3-button">לולאות</a>
+              <a href="twoDimLoops.html" class="w3-bar-item w3-button">לולאות דו מימדיות</a>
+              <a href="casting.html" class="w3-bar-item w3-button">קסטינג </a>
+              <a href="sizeOf.html" class="w3-bar-item w3-button">סייז אוף </a>
+              <a href="typeDef.html" class="w3-bar-item w3-button">טייפ דפ</a>
+              <a href="functions.html" class="w3-bar-item w3-button">פונקציות</a>
+              <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות</a>
+              <a href="pointers.html" class="w3-bar-item w3-button">מצביעים</a>
+              <a href="doublePointer.html" class="w3-bar-item w3-button">מצביע כפול</a>
+              <a href="arrays.html" class="w3-bar-item w3-button">מערכים</a>
+              <a href="dinArrays.html" class="w3-bar-item w3-button">מערכים דינאמיים</a>
+              <a href="string.html" class="w3-bar-item w3-button">מחרוזות</a>
+              <a href="binSearch.html" class="w3-bar-item w3-button">חיפוש בינארי</a>
+              <a href="twoDimArrays.html" class="w3-bar-item w3-button">מערכים דו ממדיים</a>
+              <a href="bubbleSort.html" class="w3-bar-item w3-button">מיון בועות</a>
+              <a href="selectionSort.html" class="w3-bar-item w3-button">מיון בחירה</a>
+              <a href="insertionSort.html" class="w3-bar-item w3-button">מיון הכנסה</a>
+              <a href="quickSort.html" class="w3-bar-item w3-button">מיון מהיר</a>
+              <a href="mergeSort.html" class="w3-bar-item w3-button">מיון מיזוג</a>
+            </ul>
+          </div>
+        </nav>
+        <!--End of Side bar-->
+      </div>
     </div>
+  </section>
+  <h1 class="head-left">Learning C</h1>
+  <h1 class="head-right">אופרטורים חשבוניים</h1>
+
+  <section class="First-Para">
+
+    + פעולת חיבור 
+    <br>
+    - פעולת חיסור 
+    <br>
+    / פעולה חילוק 
+    <br>
+    * פעולת כפל 
+    <br>
+    % מודולו - אופרטור שבעצם אומר לנו מהי שארית החלוקה של מספר במספר אחר. 
+    <br>
+    () סוגריים  
+    <br>
+    = השמה - זוהי בעצם פעולה שאומרת בתכנות שמה שנמצא בצד שמאל מקבל את הערך שנמצא בצד ימין. 
+    <br>
+    <br>
+    דוגמה למודולו: 
+    <br>
+    7%3 = 1 
+    <br>
+    כי: 
+    <br>
+    7/3 = 2.3333 
+    <br>
+    ושארית החלוקה שלנו היא בעצם 1 מתוך 3 (שליש) -> 1 
+    <br>
+    מהי שארית החלוקה של 12 ב4 ? 
+    <br>
+    באותה הדרך אנו נעשה קודם כל : 
+    <br>
+    12/4 = 3.0 
+    <br>
+    ניקח את ה0/4 שיש לנו ובעצם שארית החלוקה שלנו היא 0. 
+    <br>
+    <br>
+
+  </section>
 
 
-  </div>
 
-  </div>
+  <!--Second paragraph-->
+  <section class="para">
+    <div class="row">
+      <div class="col-md-6">
 
-  </div>
+        דוגמה להשמה: 
+        <br>
+        בעצם מה שקורה פה זה שאנחנו מצהירים על משתנה בשם x ואנחנו משווים אותו ל5, כלומר עשינו פה השמה. 
+        במקרה הזה, לקחנו את x (שכבר מוכר לנו כ-int), וביצענו השמה אצלו של הערך 7.
 
-  <h1 class="top-left">Learning C</h1>
-
-  </div>
 
 
-  <h2 class="top-right-head">אופרטורים חשבוניים</h2>
+      </div>
 
-  <p class="top-right">
+      <div class="col-md-6">
 
+        <figure class="code">
+
+          <figcaption id="example1-caption">CODE:</figcaption>
+          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><b>int</b> x;
+x = 7;
+            </code></pre>
+        </figure>
+      
+        
+
+      </div>
+
+
+    <div class="col"></div>
+
+
+  </section>
+
+</body>
+
+</html>
+    <!--
     + פעולת חיבור
     <br>
     - פעולת חיסור
@@ -117,14 +192,6 @@
 
 
   </p>
-<figure id="code-1">
 
-    <figcaption id="example1-caption">CODE:</figcaption>
-    <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><b>int</b> x;
-x = 7;
-      </code></pre>
-  </figure>
+-->
 
-</body>
-
-</html>
