--- a/statments.html
+++ b/statments.html
@@ -5,136 +5,193 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Learning C Statments</title>
+  <title>Learning C PrintAndScan</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
-  <link rel="stylesheet" href="css/styles.css" />
+
+  <!-- CSS -->
+
+  <!-- Bootstrap Scripts -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/statments-style.css">
-  <link rel="stylesheet" href="css/code.css">
-  <script src="js/code.js"></script>
+  <link rel="stylesheet" href="css/styles.css">
+
+
 </head>
 
-<body>
-  <div class="bg-two">
-    <div class="container">
-      <!--Side bar-->
-      <nav role="navigation">
-        <div id="menuToggle">
-          <input type="checkbox" />
-          <span></span>
-          <span></span>
-          <span></span>
-          <ul id="menu">
-            <a href="index.html" class="w3-bar-item w3-button">מי אנחנו?</a>
-            <a href="firstProgram.html" class="w3-bar-item w3-button">התוכנית הראשונה</a>
-            <a href="variables.html" class="w3-bar-item w3-button">משתנים</a>
-            <a href="printAndScan.html" class="w3-bar-item w3-button">קלט ופלט</a>
-            <a href="mathOperator.html" class="w3-bar-item w3-button">אופרטורים חשבוניים</a>
-            <a href="statments.html" class="w3-bar-item w3-button">משפטי בקרה</a>
-            <a href="oneDimLoops.html" class="w3-bar-item w3-button">לולאות</a>
-            <a href="twoDimLoops.html" class="w3-bar-item w3-button">לולאות דו מימדיות</a>
-            <a href="casting.html" class="w3-bar-item w3-button">קסטינג </a>
-            <a href="sizeOf.html" class="w3-bar-item w3-button">סייז אוף </a>
-            <a href="typeDef.html" class="w3-bar-item w3-button">טייפ דפ</a>
-            <a href="functions.html" class="w3-bar-item w3-button">פונקציות</a>
-            <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות</a>
-            <a href="pointers.html" class="w3-bar-item w3-button">מצביעים</a>
-            <a href="doublePointer.html" class="w3-bar-item w3-button">מצביע כפול</a>
-            <a href="arrays.html" class="w3-bar-item w3-button">מערכים</a>
-            <a href="dinArrays.html" class="w3-bar-item w3-button">מערכים דינאמיים</a>
-            <a href="string.html" class="w3-bar-item w3-button">מחרוזות</a>
-            <a href="binSearch.html" class="w3-bar-item w3-button">חיפוש בינארי</a>
-            <a href="twoDimArrays.html" class="w3-bar-item w3-button">מערכים דו ממדיים</a>
-            <a href="bubbleSort.html" class="w3-bar-item w3-button">מיון בועות</a>
-            <a href="selectionSort.html" class="w3-bar-item w3-button">מיון בחירה</a>
-            <a href="insertionSort.html" class="w3-bar-item w3-button">מיון הכנסה</a>
-            <a href="quickSort.html" class="w3-bar-item w3-button">מיון מהיר</a>
-            <a href="mergeSort.html" class="w3-bar-item w3-button">מיון מיזוג</a>
-          </ul>
-        </div>
-      </nav>
-      <!--End of Side bar-->
+<body class="bg-twoAndHalf">
+
+  <div class="container">
+    <!--Side bar-->
+    <nav role="navigation">
+      <div id="menuToggle">
+        <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+        <ul id="menu">
+          <a href="index.html" class="w3-bar-item w3-button">מי אנחנו?</a>
+          <a href="firstProgram.html" class="w3-bar-item w3-button">התוכנית הראשונה</a>
+          <a href="variables.html" class="w3-bar-item w3-button">משתנים</a>
+          <a href="printAndScan.html" class="w3-bar-item w3-button">קלט ופלט</a>
+          <a href="mathOperator.html" class="w3-bar-item w3-button">אופרטורים חשבוניים</a>
+          <a href="statments.html" class="w3-bar-item w3-button">משפטי בקרה</a>
+          <a href="oneDimLoops.html" class="w3-bar-item w3-button">לולאות</a>
+          <a href="twoDimLoops.html" class="w3-bar-item w3-button">לולאות דו מימדיות</a>
+          <a href="casting.html" class="w3-bar-item w3-button">קסטינג </a>
+          <a href="sizeOf.html" class="w3-bar-item w3-button">סייז אוף </a>
+          <a href="typeDef.html" class="w3-bar-item w3-button">טייפ דפ</a>
+          <a href="functions.html" class="w3-bar-item w3-button">פונקציות</a>
+          <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות</a>
+          <a href="pointers.html" class="w3-bar-item w3-button">מצביעים</a>
+          <a href="doublePointer.html" class="w3-bar-item w3-button">מצביע כפול</a>
+          <a href="arrays.html" class="w3-bar-item w3-button">מערכים</a>
+          <a href="dinArrays.html" class="w3-bar-item w3-button">מערכים דינאמיים</a>
+          <a href="string.html" class="w3-bar-item w3-button">מחרוזות</a>
+          <a href="binSearch.html" class="w3-bar-item w3-button">חיפוש בינארי</a>
+          <a href="twoDimArrays.html" class="w3-bar-item w3-button">מערכים דו ממדיים</a>
+          <a href="bubbleSort.html" class="w3-bar-item w3-button">מיון בועות</a>
+          <a href="selectionSort.html" class="w3-bar-item w3-button">מיון בחירה</a>
+          <a href="insertionSort.html" class="w3-bar-item w3-button">מיון הכנסה</a>
+          <a href="quickSort.html" class="w3-bar-item w3-button">מיון מהיר</a>
+          <a href="mergeSort.html" class="w3-bar-item w3-button">מיון מיזוג</a>
+        </ul>
+      </div>
+    </nav>
+    <!--End of Side bar-->
+
+  </div>
+
+  <h1 class="head-left">Learning C</h1>
+  <h1 class="head-right">משפטי בקרה</h1>
+
+  <!--first paragraph-->
+
+  <div class="para">
+
+    <div class="row">
+
+      <div class="col-md-6">
+
+
+        <p>
+
+          משפט שעל פיו אפשר לקבוע אמת / שקר נקרא - משפט בוליאני.
+          <br>
+          לדוגמה:
+          <br>
+          1. גשם יורד בחוץ כרגע.
+          <br>
+          2. x>0
+          <br>
+          3. grade >= 60
+          <br>
+
+          פעולות שניתן להשתמש בהן בשפת סי לצורך בדיקה בקרה:
+          <br>
+          1. > (קטן / גדול מ..)
+          <br>
+          2. < (קטן / גדול מ..) <br>
+            3. >= (קטן שווה / גדול שווה מ..)
+            <br>
+            4. <= (קטן שווה / גדול שווה מ..) <br>
+              5. == (שווה)
+              <br>
+              6. != (שונה)
+              <br>
+              <br>
+              משפטים בשפת סי שניתן להשתמש בהן לצורך בדיקת בקרה:
+              <br>
+              if() - פעולה שבודקת האם מה שבתוך הסוגריים מתקיים - אם כן אנחנו נכנסים לתוך הקוד שימצא בתוך סוגריים
+              מסולסלות.
+              <br>
+              <br>
+              else - פעולה שנעשית אם ורק אם פעולת הif שקדה לה לא התקיימה - גם פה , במידה ואנחנו מגלים שה else התקיים
+              אנחנו נכנסים לתוך קטע הקוד שימצא בתוך סוגרים מסולסלות.
+              <br>
+              <br>
+              else if() - זוהי בדיקה שעובדת לאחר שיש if לפניה. הבדיקה תיעשה אם ורק אם הif הקודם שלנו לא התקיים.
+              <br>
+              <br>
+
+
+        </p>
+
+      </div>
+
     </div>
-  </div>
-
-  <h1 class="top-left">Learning C</h1>
 
   </div>
 
-  <h2 class="top-right-head">משפטי בקרה</h2>
+  <!--Second paragraph-->
 
-  <p class="top-right">
+  <div class="para">
 
-    משפט שעל פיו אפשר לקבוע אמת / שקר נקרא - משפט בוליאני.
-    <br>
-    לדוגמה:
-    <br>
-    1. גשם יורד בחוץ כרגע.
-    <br>
-    2. X>0
-    <br>
-    3. grade >= 60
-    <br>
-    <br>
-    פעולות שניתן להשתמש בהן בשפת סי לצורך בדיקה בקרה:
-    <br>
-    1. &gt; (קטן / גדול מ..)
-    <br>
-    2. &lt; (קטן / גדול מ..) <br>
-    3. &gt;= (קטן שווה / גדול שווה מ..)
-    <br>
-    4. &lt;= (קטן שווה / גדול שווה מ..) <br>
-    5. == (שווה)
-    <br>
-    6. != (שונה)
-    <br>
-    <br>
-    משפטים בשפת סי שניתן להשתמש בהן לצורך בדיקת בקרה:
-    <br>
-    <span dir="ltr">if()</span> - פעולה שבודקת האם מה שבתוך הסוגריים מתקיים - אם כן אנחנו נכנסים לתוך הקוד שימצא בתוך סוגריים מסולסלות.
-    <br>
-    <br>
-    else - פעולה שנעשית אם ורק אם פעולת הif שקדה לה לא התקיימה - גם פה , במידה ואנחנו מגלים שה else התקיים אנחנו
-    נכנסים לתוך קטע הקוד שימצא בתוך סוגרים מסולסלות.
-    <br>
-    <br>
-    <span dir="ltr">else if() </span>- זוהי בדיקה שעובדת לאחר שיש if לפניה. הבדיקה תיעשה אם ורק אם הif הקודם שלנו לא התקיים.
-    <br>
-    <br>
-    נראה דוגמה במילים ולאחר מכן נפתור אותה בכתב:
-    <br>
-    נניח שאנחנו בודקים האם גילו של אדם הוא מספיק מבוגר כדי לעלות על מתקן בלונה פארק ונניח שגילו המינימלי של אדם
-    שעולה על המתקן צריך להיות 15.
-    <br>
-    ז"א - כדי שאדם יוכל לעלות על המתקן אנו נצטרך לוודא שהוא לפחות בן 15.
-    <br>
-    <br>
-    פתרון בקוד:
-  </p>
-  <!--CODE-->
-  <figure id="code-1">
+    <div class="row">
 
-    <figcaption id="example1-caption">CODE:</figcaption>
-    <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.io&gt;</u>
-<b>void</b> main() <em>// main function - this is the code that will be executed when we click f5.</em>
-{
-  <b>int</b> age = 15; <em>// declaring an integer variable named age and setting in to 15.</em>
-  
-  <b>if</b>(age >= 15) <em>// checking if our age variable is greater or equal to 15.</em>
+      <div class="col-md-6">
+
+
+        <p>
+          לדוגמה:
+          <br>
+          printf = הפקודה שאנו מבצעים
+          <br>
+          "%d" = סוג המשתנה שאותו אנו מדפיסים (במקרה שלנו אינט)
+          <br>
+          x = שם המשתנה שאותו אנו מדפיסים
+          <br>
+          אפשר לחשוב שבאמצעות הקוד שלנו אנחנו בעצם אומרים – תדפיס את הערך של int בשם x.
+          <br>
+
+        </p>
+
+      </div>
+
+
+
+      <div class="col-md-6">
+
+        <figure class="code">
+
+          <figcaption id="example1-caption">CODE:</figcaption>
+          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.io&gt;</u>
+  <b>void</b> main() <em>// main function - this is the code that will be executed when we click f5.</em>
   {
-    printf(<u>"You can enter\n"</u>);<em> // this code will be executed only if our if statement is true.</em>
-  }
-  <b>else</b><em>// the code inside the curly brackets will be executed only if our if statement is false.</em>
-  {
-    printf(<u>"You can't enter\n"</u>);
-  }
-} <em>// End of main function</em>
-        </code></pre>
-  </figure>
+    <b>int</b> age = 15; <em>// declaring an integer variable named age and setting in to 15.</em>
+    
+    <b>if</b>(age >= 15) <em>// checking if our age variable is greater or equal to 15.</em>
+    {
+      printf(<u>"You can enter\n"</u>);<em> // this code will be executed only if our if statement is true.</em>
+    }
+    <b>else</b><em>// the code inside the curly brackets will be executed only if our if statement is false.</em>
+    {
+      printf(<u>"You can't enter\n"</u>);
+    }
+  } <em>// End of main function</em>
+          </code></pre>
+        </figure>
 
-
+      </div>
 
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+<!--CODE
+  
+נראה דוגמה במילים ולאחר מכן נפתור אותה בקוד: 
+          נניח שאנחנו בודקים האם גילו של אדם הוא מספיק מבוגר כדי לעלות על מתקן בלונה פארק ונניח שגילו המינימלי של אדם שעולה על המתקן צריך להיות 15. 
+          ז"א - כדי שאדם יוכל לעלות על המתקן אנו נצטרך לוודא שהוא לפחות בן 15. 
+          <br>
+          פתרון בקוד:
+-->
